--- a/app/views/user_mailer/offline_message.html.haml
+++ b/app/views/user_mailer/offline_message.html.haml
@@ -10,4 +10,4 @@
 %hr
 %br
 %p
-  =link_to("Go to room", ENV['HOSTNAME_SITE']+"/rooms/#{@room}")
+  = link_to( 'Go to room', ENV['HOSTNAME_SITE']+"/rooms/#{@room}" )
