--- a/app/views/users/invitations/edit.html.haml
+++ b/app/views/users/invitations/edit.html.haml
@@ -1,7 +1,7 @@
 =render 'layouts/navigation'
 .authform
   %h2= t 'devise.invitations.edit.header'
-  = form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => { :method => :put } do |f|
+  = form_for resource, as: resource_name, url: invitation_path(resource_name), html: { method: :put } do |f|
     = devise_error_messages!
     = f.hidden_field :invitation_token
     .form-group
@@ -24,4 +24,4 @@
         = f.label :password_confirmation
         %br/
       = f.password_field :password_confirmation
-    %p= f.submit t("devise.invitations.edit.submit_button"),:class => 'button right'
+    %p= f.submit t('devise.invitations.edit.submit_button'), class: 'button right'
