--- a/app/views/rooms/create.js.erb
+++ b/app/views/rooms/create.js.erb
@@ -1,6 +1,6 @@
 $('.left').remove();
-$('body').prepend("<%= escape_javascript render :partial => 'layouts/rooms_list'%>");
-$('#room_list').html("<%= escape_javascript render :partial => 'rooms/show_rooms_list'%>");
+$('body').prepend("<%= escape_javascript render partial: 'layouts/rooms_list'%>");
+$('#room_list').html("<%= escape_javascript render partial: 'rooms/show_rooms_list'%>");
 $(".content").on("click",".delete_room",function(e){element_delete_room=e.currentTarget});$(".delete_room").confirm({text:"Are you sure you want to delete this room?",title:"Confirmation required",confirm:function(e){
     $.ajax({
         url: '../rooms/' +$(element_delete_room).data("id") ,
