--- a/app/views/users/_form_for.html.haml
+++ b/app/views/users/_form_for.html.haml
@@ -1,4 +1,4 @@
 %ul.right
   - @user_friends.each do |friend|
     %li
-      = link_to "#{friend.firstname} #{friend.lastname}", {:controller => 'rooms_users', :action => 'create', :room_id => @room.id}
+      = link_to "#{friend.firstname} #{friend.lastname}", { controller: 'rooms_users', action: 'create', room_id: @room.id}
