--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,7 @@
 = render 'layouts/rooms_list'
 .content
   #photo
-    = image_tag avatar_url(@user,125), :class => "img-profle"
+    = image_tag avatar_url(@user,125), class: 'img-profle'
   %span#user_name
     = "#{@user.firstname} #{@user.lastname}"
   %br
@@ -10,7 +10,7 @@
       = "#{@user.email}"
   %br
     Avatar supported by
-    = link_to 'gravatar.com', 'https://ru.gravatar.com', {:target => "_blank"}
+    = link_to 'gravatar.com', 'https://ru.gravatar.com', { target: '_blank' }
   %br
   %br
   %span#find_more_friends
@@ -27,13 +27,13 @@
               %tr{:friend_id => friendship.friend.id}
                 %td.name
                   .friend_photo
-                    = image_tag avatar_url(friendship.friend,50),:class => "friend_photo"
+                    = image_tag avatar_url( friendship.friend, 50 ), class: 'friend_photo'
                   .friend_name
                   =link_to "#{friendship.friend.login}",user_path(friendship.friend.login)
                 - if (@user.id == current_user.id)
-                  %td.friend_action.remove_friend{:friend_id => friendship.friend.id}
-                    %span{:class => "glyphicon glyphicon-minus remove_friend"}
+                  %td.friend_action.remove_friend{ friend_id: friendship.friend.id }
+                    %span{ class: 'glyphicon glyphicon-minus remove_friend' }
                 - elsif friendship.friend.id != current_user.id
                   - if !is_friend? friendship.friend.id
                     %td.friend_action.add_friend
-                      %span{:class => "glyphicon glyphicon-plus add_new_friend"}
+                      %span{ class: 'glyphicon glyphicon-plus add_new_friend' }
