User avatar in edit user modal

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -138,3 +138,15 @@ ul#friends_list {
   font-size: 20px;
   margin-top: 0px;
 }
+
+#avatar_info_group {
+  margin: 0px;
+  width: 300px;
+  height: 55px;
+  border: 2px dashed #505050;
+}
+
+#gravatar_link{
+  padding-top: 10px;
+  float: left;
+}
