--- a/app/views/user_mailer/welcome_email.text.haml
+++ b/app/views/user_mailer/welcome_email.text.haml
@@ -2,4 +2,5 @@
 , Thank you for registering!
 %hr
 %br
-You can start from =link_to "here", ENV['HOSTNAME_SITE']+"/rooms/#{@room}", method: :delete
+You can start from
+=link_to "here", ENV['HOSTNAME_SITE']+"/rooms/#{@room}", method: :delete
