change modal profile photo

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -147,6 +147,11 @@ ul#friends_list {
 }
 
 #gravatar_link{
+  margin-left: 10px;
   padding-top: 10px;
   float: left;
+}
+
+#profile_avatar {
+  border-radius: 20%;
 }
