fix button facebook and fix active_admin

--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -19,7 +19,7 @@
     = link_to 'Sign up', new_user_registration_path
   %li
     = link_to  user_omniauth_authorize_path(:facebook), class: 'navbar-brand' do
-      %img{:src=>"../img/facebook.ico",:class=>"social-button"}
+      %img{:src=>"../img/facebook.png",:class=>"social-button"}
       Sign in with facebook
   %li
     = link_to user_omniauth_authorize_path(:github), class: 'navbar-brand' do
