--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,12 +5,14 @@
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
     %title= content_for?(:title) ? yield(:title) : 'Chat'
     %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Chat'}"}
+    %script{:src=>"http://code.jquery.com/jquery-1.11.0.min.js"}
+    %script{:src=>"http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"}
     %script{:src=>"http://js.pusher.com/2.1/pusher.min.js"}
     = stylesheet_link_tag "application", media: "all"
     = csrf_meta_tags
     = javascript_include_tag "application"
   - if !@background_image.nil?
-    %body{:style=>("background-image:url('#{@background_image.path}');")}
+    %body{:style=>("background-images:url('#{@background_image.path}');")}
       = yield
   - else
     %body
@@ -30,10 +32,10 @@
                 {{#safe_mess messages}}{{/safe_mess}}
               {{#if attach_file_path}}
               %p.attach-file
-                {{#attach-files attach_file_path}}{{/attach-files}}
+                {{attach_file_path}}
               {{/if}}
         {{/messages}}
+      =render "devise/registrations/edit_modal"
       = yield
-
 
 
