--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -86,9 +86,6 @@ ul#friends_list {
   height: 60px;
   float: right;
   padding: 10px;
-
-  width: 50px;
-  height: 50px;
   text-align: center;
 }
 
@@ -97,6 +94,7 @@ ul#friends_list {
 }
 .add_new_friend
 {
+  top: 18px;
   cursor: pointer;
 }
 .add_friend
@@ -105,6 +103,7 @@ ul#friends_list {
 }
 .remove_friend
 {
+  top: 18px;
   cursor: pointer;
 }
 .friend:hover {
