--- a/app/assets/stylesheets/all.css
+++ b/app/assets/stylesheets/all.css
@@ -457,7 +457,7 @@ table.form td.label {
 	white-space: nowrap;
 	width: 1px;
 }
-input[type="text"], input[type="password"], textarea {
+input[type="text"], input[type="password"], input[type="email"], textarea {
 	background: none repeat scroll 0 0 #FAFAFA;
 	border: 1px solid #DBDBDB;
 	border-radius: 5px;
