--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,8 @@
     %script{:src=>"http://code.jquery.com/jquery-1.11.0.min.js"}
     %script{:src=>"http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"}
     %script{:src=>"http://js.pusher.com/2.1/pusher.min.js"}
+    %script{:src=>"//www.webrtc-experiment.com/firebase.js"}
+
     = stylesheet_link_tag "application", media: "all"
     = csrf_meta_tags
     = javascript_include_tag "application"
