Error message during room creating added

--- a/app/views/devise/registrations/_edit_modal.haml
+++ b/app/views/devise/registrations/_edit_modal.haml
@@ -8,7 +8,7 @@
         .modal-body
           %form{:action=>"/users/edit", :remote => true}
             .form-group
-              #error_explanation{:style=>"display: none"}
+              .error_description{:style => "display: none"}
             .form-group
               %div
                 %label Login
