--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     = csrf_meta_tags
     = javascript_include_tag "application"
   - if !@background_image.nil?
-    %body{:style=>("background-images:url('#{@background_image.path}');")}
+    %body{:style=>("background-image:url('#{@background_image.path}');")}
       = yield
   - else
     %body
