--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -22,6 +22,10 @@
       %img{:src=>"../img/facebook.png",:class=>"social-button"}
       Sign in with facebook
   %li
+    = link_to user_omniauth_authorize_path(:google_oauth2), class: 'navbar-brand' do
+      %img{:src=>"../img/google.png", :class=>"social-button"}
+      Sign in with google
+  %li
     = link_to user_omniauth_authorize_path(:github), class: 'navbar-brand' do
       %img{:src=>"../img/github.jpg", :class=>"social-button"}
       Sign in with github
