--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -5,12 +5,14 @@
       %span.user_name
       %h3
         = link_to "#{current_user.firstname} #{current_user.lastname}", user_path(current_user.login)
-      = form_tag users_path, :id => 'user_search', :method => 'get' do
-        = text_field_tag 'search', params[:search], :id => 'search-box', :placeholder=>"Login"
-        = submit_tag 'Search', :class=>"btn btn-primary lobby-btn"
-        %h3 Invite user
-        = form_tag invite_user_path, :method => 'post' do
-          = text_field_tag 'email', nil, :placeholder=>"E-mail", :type => 'email'
-          = button_tag 'Send invite', :class=>"btn btn-primary lobby-btn inv"
+
+  = form_tag users_path, :id => 'user_search', :method => 'get' do
+    %h3 Find User
+    = text_field_tag 'search', params[:search], :id => 'search-box', :placeholder=>"Login"
+    = submit_tag 'Search', :class=>"btn btn-primary lobby-btn"
+    %h3 Invite user
+    = form_tag invite_user_path, :method => 'post' do
+      = text_field_tag 'email', nil, :placeholder=>"E-mail", :type => 'email'
+      = button_tag 'Send invite', :class=>"btn btn-primary lobby-btn inv"
     = render 'friends'
 
