add twitter and google logo

--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -27,7 +27,7 @@
       Sign in with twitter
   %li
     = link_to user_omniauth_authorize_path(:google_oauth2), class: 'navbar-brand' do
-      %img{:src=>"../img/google.png", :class=>"social-button"}
+      %img{:src=>"../img/google.jpg", :class=>"social-button"}
       Sign in with google
   %li
     = link_to user_omniauth_authorize_path(:github), class: 'navbar-brand' do
