--- a/app/assets/stylesheets/all.css
+++ b/app/assets/stylesheets/all.css
@@ -562,6 +562,10 @@ div.server-upsell {
 {
     width: 20px;
 }
+.h3freind
+{
+    margin-top: 120px;
+}
 /* sign_up end */
 .tabbable .active{background-color: white;}
 .textcomplete-wrapper{height:100%;}
