firstname and lastname

--- a/app/views/rooms/_show_rooms_list.html.haml
+++ b/app/views/rooms/_show_rooms_list.html.haml
@@ -11,7 +11,7 @@
           = 'members'
         %td.owner
           = 'Owned by: '
-          = link_to "#{room.creator.login}", user_path(room.creator.login), class: 'current_user_login'
+          = link_to "#{room.creator.firstname}"+ " #{room.creator.lastname}", user_path(room.creator.login), class: 'current_user_login'
         %td.set-arr
           - if room.creator.login == current_user.login
             %span.delete_room.glyphicon.glyphicon-remove-circle{ data: { id: room.id } }
