--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -14,5 +14,6 @@
     = form_tag invite_user_path, :method => 'post' do
       = text_field_tag 'email', nil, :placeholder=>"E-mail", :type => 'email'
       = button_tag 'Send invite', :class=>"btn btn-primary lobby-btn inv"
+    %h3.h3freind Friends
     = render 'friends'
 
