fixing firstname last name into _room_lish.haml

--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -76,7 +76,7 @@
             - @room_users.each do |user|
               .member{ data: { toggle: 'tooltip', user_id: user.id, room_id: @room.id }, title: "#{user.user_status == 'Offline' ? 'Offline ' + time_ago_in_words(user.updated_at) : user.user_status}" }
                 %span{ class: get_user_status_style(user.user_status) }
-                = link_to "#{user.firstname+' '+user.lastname}", '#'
+                = link_to " '#{user.firstname}'+ '#{user.lastname}' ", '#'
                 - if user.id != current_user.id && @room.creator_id == current_user.id
                   %span{ class: 'glyphicon glyphicon-minus pull-right drop_room_user' }
           .friend-list.right_search_user
