change modal title on 'Error List'

--- a/app/views/layouts/limit_message.js.erb
+++ b/app/views/layouts/limit_message.js.erb
@@ -3,7 +3,7 @@ $('body').prepend("<div id='limit' class='modal fade in' tabindex='-1' role='dia
         "<div class='modal-content'>"+
         "<div class='modal-header'>"+
         "<button class='close' type='button' data-dismiss='modal' aria-hidden='true'></button>"+
-        "<h4 id='myModalLabel' class='modal-title'> Over Limit</h4>"+
+        "<h4 id='myModalLabel' class='modal-title'> Error List</h4>"+
         "</div>"+
         "<div class='modal-body' style='text-align: center;margin-top: 16px; font-size: 18px;'><h4 id='myModalLabel' class='modal-title'>"+ "<%=error.errors.full_messages.join('. ') %>" +"</h4>"+
         "<div class='modal-footer'>"+
