fixed errors in login form

--- a/app/views/user_mailer/welcome_email.text.haml
+++ b/app/views/user_mailer/welcome_email.text.haml
@@ -3,4 +3,4 @@
 %hr
 %br
 You can start from
-=link_to "here", ENV['HOSTNAME_SITE']+"/rooms/#{@room}", method: :delete
+=link_to "here", ENV['HOSTNAME_SITE']
