--- a/app/assets/stylesheets/chat.css.scss
+++ b/app/assets/stylesheets/chat.css.scss
@@ -5,6 +5,9 @@
 .navbar-fixed-top{
   height:40px;
 }
+.change_topic.glyphicon.glyphicon-pencil{
+  top:-3px;
+}
 .nav.navbar-nav.navbar-right.navbar-user li{
   margin:-8px 0;
   padding-right: 15px;
