--- a/app/views/layouts/_index.html.haml
+++ b/app/views/layouts/_index.html.haml
@@ -1,6 +1,6 @@
 .emoji
   .smile.sprite-1#:1:
-  .smile.sprite--1#:be:
+  .smile.sprite-be#:be:
   .smile.sprite-alien#:alien:
   .smile.sprite-angel#:angel:
   .smile.sprite-anger#:anger:
@@ -8,35 +8,35 @@
   .smile.sprite-anguished#:anguished:
   .smile.sprite-astonished#:astonished:
   .smile.sprite-baby#:baby:
-  .smile.sprite-blue-heart#:blue_heart:
+  .smile.sprite-blue_heart#:blue_heart:
   .smile.sprite-blush#:blush:
   .smile.sprite-boom#:boom:
   .smile.sprite-bow#:bow:
   .smile.sprite-bowtie#:bowtie:
   .smile.sprite-boy#:boy:
-  .smile.sprite-bride-with-veil#:bride_with_veil:
-  .smile.sprite-broken-heart#:broken_heart:
-  .smile.sprite-bust-in-silhouette#:bust_in_silhouette:
-  .smile.sprite-busts-in-silhouette#:busts_in_silhouette:
+  .smile.sprite-bride_with_veil#:bride_with_veil:
+  .smile.sprite-broken_heart#:broken_heart:
+  .smile.sprite-bust_in_silhouette#:bust_in_silhouette:
+  .smile.sprite-busts_in_silhouette#:busts_in_silhouette:
   .smile.sprite-clap#:clap:
-  .smile.sprite-cold-sweat#:cold_sweat:
+  .smile.sprite-cold_sweat#:cold_sweat:
   .smile.sprite-collision#:collision:
   .smile.sprite-confounded#:confounded:
   .smile.sprite-confused#:confused:
-  .smile.sprite-construction-worker#:construction_worker:
+  .smile.sprite-construction_worker#:construction_worker:
   .smile.sprite-cop#:cop:
   .smile.sprite-couple#:couple:
-  .smile.sprite-couple-with-heart#:couple_with_heart:
+  .smile.sprite-couple_with_heart#:couple_with_heart:
   .smile.sprite-couplekiss#:couplekiss:
   .smile.sprite-cry#:cry:
-  .smile.sprite-crying-cat-face#:crying_cat_face:
+  .smile.sprite-crying_cat_face#:crying_cat_face:
   .smile.sprite-cupid#:cupid:
   .smile.sprite-dancer#:dancer:
   .smile.sprite-dancers#:dancers:
   .smile.sprite-dash#:dash:
   .smile.sprite-disappointed#:disappointed:
   .smile.sprite-dizzy#:dizzy:
-  .smile.sprite-dizzy-face#:dizzy_face:
+  .smile.sprite-dizzy_face#:dizzy_face:
   .smile.sprite-droplet#:droplet:
   .smile.sprite-ear#:ear:
   .smile.sprite-exclamation#:exclamation:
@@ -56,7 +56,7 @@
   .smile.sprite-girl#:girl:
   .smile.sprite-goberserk#:goberserk:
   .smile.sprite-godmode#:godmode:
-  .smile.sprite-green-heart#:green_heart:
+  .smile.sprite-green_heart#:green_heart:
   .smile.sprite-grimacing#:grimacing:
   .smile.sprite-grin#:grin:
   .smile.sprite-grinning#:grinning:
@@ -64,114 +64,114 @@
   .smile.sprite-haircut#:haircut:
   .smile.sprite-hand#:hand:
   .smile.sprite-hankey#:hankey:
-  .smile.sprite-hear-no-evil#:hear_no_evil:
+  .smile.sprite-hear_no_evil#:hear_no_evil:
   .smile.sprite-heart#:heart:
-  .smile.sprite-heart-eyes#:heart_eyes:
-  .smile.sprite-heart-eyes-cat#:heart_eyes_cat:
+  .smile.sprite-heart_eyes#:heart_eyes:
+  .smile.sprite-heart_eyes_cat#:heart_eyes_cat:
   .smile.sprite-heartbeat#:heartbeat:
   .smile.sprite-heartpulse#:heartpulse:
   .smile.sprite-hurtrealbad#:hurtrealbad:
   .smile.sprite-hushed#:hushed:
   .smile.sprite-imp#:imp:
-  .smile.sprite-information-desk-person#:information_desk_person:
+  .smile.sprite-information_desk_person#:information_desk_person:
   .smile.sprite-innocent#:innocent:
-  .smile.sprite-japanese-goblin#:japanese_goblin:
-  .smile.sprite-japanese-ogre#:japanese_ogre:
+  .smile.sprite-japanese_goblin#:japanese_goblin:
+  .smile.sprite-japanese_ogre#:japanese_ogre:
   .smile.sprite-joy#:joy:
-  .smile.sprite-joy-cat#:joy_cat:
+  .smile.sprite-joy_cat#:joy_cat:
   .smile.sprite-kiss#:kiss:
   .smile.sprite-kissing#:kissing:
-  .smile.sprite-kissing-cat#:kissing_cat:
-  .smile.sprite-kissing-closed-eyes#:kissing_closed_eyes:
-  .smile.sprite-kissing-face#:kissing_face:
-  .smile.sprite-kissing-heart#:kissing_heart:
-  .smile.sprite-kissing-smiling-eyes#:kissing_smiling_eyes:
+  .smile.sprite-kissing_cat#:kissing_cat:
+  .smile.sprite-kissing_closed_eyes#:kissing_closed_eyes:
+  .smile.sprite-kissing_face#:kissing_face:
+  .smile.sprite-kissing_heart#:kissing_heart:
+  .smile.sprite-kissing_smiling_eyes#:kissing_smiling_eyes:
   .smile.sprite-laughing#:laughing:
   .smile.sprite-lips#:lips:
-  .smile.sprite-love-letter#:love_letter:
+  .smile.sprite-love_letter#:love_letter:
   .smile.sprite-man#:man:
-  .smile.sprite-man-with-gua-pi-mao#:man_with_gua_pi_mao:
-  .smile.sprite-man-with-turban#:man_with_turban:
+  .smile.sprite-man_with_gua_pi_mao#:man_with_gua_pi_mao:
+  .smile.sprite-man_with_turban#:man_with_turban:
   .smile.sprite-mask#:mask:
   .smile.sprite-massage#:massage:
   .smile.sprite-metal#:metal:
   .smile.sprite-muscle#:muscle:
-  .smile.sprite-musical-note#:musical_note:
-  .smile.sprite-nail-care#:nail_care:
+  .smile.sprite-musical_note#:musical_note:
+  .smile.sprite-nail_care#:nail_care:
   .smile.sprite-neckbeard#:neckbeard:
-  .smile.sprite-neutral-face#:neutral_face:
-  .smile.sprite-no-good#:no_good:
-  .smile.sprite-no-mouth#:no_mouth:
+  .smile.sprite-neutral_face#:neutral_face:
+  .smile.sprite-no_good#:no_good:
+  .smile.sprite-no_mouth#:no_mouth:
   .smile.sprite-nose#:nose:
   .smile.sprite-notes#:notes:
-  .smile.sprite-ok-hand#:ok_hand:
-  .smile.sprite-ok-woman#:ok_woman:
-  .smile.sprite-older-man#:older_man:
-  .smile.sprite-older-woman#:older_woman:
-  .smile.sprite-open-hands#:open_hands:
-  .smile.sprite-open-mouth#:open_mouth:
+  .smile.sprite-ok_hand#:ok_hand:
+  .smile.sprite-ok_woman#:ok_woman:
+  .smile.sprite-older_man#:older_man:
+  .smile.sprite-older_woman#:older_woman:
+  .smile.sprite-open_hands#:open_hands:
+  .smile.sprite-open_mouth#:open_mouth:
   .smile.sprite-pensive#:pensive:
   .smile.sprite-persevere#:persevere:
-  .smile.sprite-person-frowning#:person_frowning:
-  .smile.sprite-person-with-blond-hair#:person_with_blond_hair:
-  .smile.sprite-person-with-pouting-face#:person_with_pouting_face:
-  .smile.sprite-point-down#:point_down:
-  .smile.sprite-point-left#:point_left:
-  .smile.sprite-point-right#:point_right:
-  .smile.sprite-point-up#:point_up:
-  .smile.sprite-point-up-2#:point_up_2:
-  .smile.sprite-pouting-cat#:pouting_cat:
+  .smile.sprite-person_frowning#:person_frowning:
+  .smile.sprite-person_with_blond_hair#:person_with_blond_hair:
+  .smile.sprite-person_with_pouting_face#:person_with_pouting_face:
+  .smile.sprite-point_down#:point_down:
+  .smile.sprite-point_left#:point_left:
+  .smile.sprite-point_right#:point_right:
+  .smile.sprite-point_up#:point_up:
+  .smile.sprite-point_up_2#:point_up_2:
+  .smile.sprite-pouting_cat#:pouting_cat:
   .smile.sprite-pray#:pray:
   .smile.sprite-princess#:princess:
-  .smile.sprite-purple-heart#:purple_heart:
+  .smile.sprite-purple_heart#:purple_heart:
   .smile.sprite-question#:question:
   .smile.sprite-rage#:rage:
   .smile.sprite-rage2#:rage2:
   .smile.sprite-rage3#:rage3:
   .smile.sprite-rage4#:rage4:
-  .smile.sprite-raised-hand#:raised_hand:
-  .smile.sprite-raised-hands#:raised_hands:
+  .smile.sprite-raised_hand#:raised_hand:
+  .smile.sprite-raised_hands#:raised_hands:
   .smile.sprite-relaxed#:relaxed:
   .smile.sprite-relieved#:relieved:
-  .smile.sprite-revolving-hearts#:revolving_hearts:
+  .smile.sprite-revolving_hearts#:revolving_hearts:
   .smile.sprite-runner#:runner:
   .smile.sprite-running#:running:
   .smile.sprite-satisfied#:satisfied:
   .smile.sprite-scream#:scream:
-  .smile.sprite-scream-cat#:scream_cat:
-  .smile.sprite-see-no-evil#:see_no_evil:
+  .smile.sprite-scream_cat#:scream_cat:
+  .smile.sprite-see_no_evil#:see_no_evil:
   .smile.sprite-skull#:skull:
   .smile.sprite-sleeping#:sleeping:
   .smile.sprite-sleepy#:sleepy:
-  .smile.sprite-smile-cat#:smile_cat:
+  .smile.sprite-smile_cat#:smile_cat:
   .smile.sprite-smiley#:smiley:
-  .smile.sprite-smiley-cat#:smiley_cat:
-  .smile.sprite-smiling-imp#:smiling_imp:
+  .smile.sprite-smiley_cat#:smiley_cat:
+  .smile.sprite-smiling_imp#:smiling_imp:
   .smile.sprite-smirk#:smirk:
-  .smile.sprite-smirk-cat#:smirk_cat:
+  .smile.sprite-smirk_cat#:smirk_cat:
   .smile.sprite-sob#:sob:
   .smile.sprite-sparkles#:sparkles:
-  .smile.sprite-sparkling-heart#:sparkling_heart:
-  .smile.sprite-speak-no-evil#:speak_no_evil:
-  .smile.sprite-speech-balloon#:speech_balloon:
+  .smile.sprite-sparkling_heart#:sparkling_heart:
+  .smile.sprite-speak_no_evil#:speak_no_evil:
+  .smile.sprite-speech_balloon#:speech_balloon:
   .smile.sprite-star#:star:
   .smile.sprite-star2#:star2:
-  .smile.sprite-stuck-out-tongue#:stuck_out_tongue:
-  .smile.sprite-stuck-out-tongue-closed-eyes#:stuck_out_tongue_closed_eyes:
-  .smile.sprite-stuck-out-tongue-winking-eye#:stuck_out_tongue_winking_eye:
+  .smile.sprite-stuck_out_tongue#:stuck_out_tongue:
+  .smile.sprite-stuck_out_tongue_closed_eyes#:stuck_out_tongue_closed_eyes:
+  .smile.sprite-stuck_out_tongue_winking_eye#:stuck_out_tongue_winking_eye:
   .smile.sprite-sunglasses#:sunglasses:
   .smile.sprite-suspect#:suspect:
   .smile.sprite-sweat#:sweat:
-  .smile.sprite-sweat-drops#:sweat_drops:
-  .smile.sprite-sweat-smile#:sweat_smile:
-  .smile.sprite-thought-balloon#:thought_balloon:
-  .smile.sprite-tired-face#:tired_face:
+  .smile.sprite-sweat_drops#:sweat_drops:
+  .smile.sprite-sweat_smile#:sweat_smile:
+  .smile.sprite-thought_balloon#:thought_balloon:
+  .smile.sprite-tired_face#:tired_face:
   .smile.sprite-tongue#:tongue:
   .smile.sprite-triumph#:triumph:
   .smile.sprite-trollface#:trollface:
-  .smile.sprite-two-hearts#:two_hearts:
-  .smile.sprite-two-men-holding-hands#:two_men_holding_hands:
-  .smile.sprite-two-women-holding-hands#:two_women_holding_hands:
+  .smile.sprite-two_hearts#:two_hearts:
+  .smile.sprite-two_men_holding_hands#:two_men_holding_hands:
+  .smile.sprite-two_women_holding_hands#:two_women_holding_hands:
   .smile.sprite-unamused#:unamused:
   .smile.sprite-v#:v:
   .smile.sprite-walking#:walking:
@@ -181,6 +181,6 @@
   .smile.sprite-wink2#:wink2:
   .smile.sprite-woman#:woman:
   .smile.sprite-worried#:worried:
-  .smile.sprite-yellow-heart#:yellow_heart:
+  .smile.sprite-yellow_heart#:yellow_heart:
   .smile.sprite-yum#:yum:
   .smile.sprite-zzz#:zzz:
