--- a/app/views/messages/_dialog.html.haml
+++ b/app/views/messages/_dialog.html.haml
@@ -10,7 +10,7 @@
   .chat
     .nano
       .nano-content
-        -if @messages.count>10
+        -if @message_count>10
           .pag
             .glyphicon.glyphicon-chevron-up
         #messages-wrapper
